# errs-rust

./: Cargo.toml  README.md  build.sh
.github/workflows/: rust.yml
src/: err.rs  lib.rs  notify.rs
src/err/: mod.rs  notify.rs
src/notify/: blocking.rs  errors.rs  mod.rs  std_handler.rs  tokio_handler.rs
tests/: errs_test.rs  global_handler_registeration_on_std_rt_test.rs  global_handler_registeration_on_tokio_rt_test.rs  sync_handler_registration_order_test.rs
tests/compile_errors/: lifetime_of_reason_in_dropped_errs.rs  lifetime_of_returned_reason_in_errs.rs
