[package]
name = "errs"
version = "0.1.0"
authors = ["Takayuki Sato <sttk.xslet@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"
description = "A library for handling errors with reasons"
documentation = "https://docs.rs/errs"
readme = "README.md"
repository = "https://github.com/sttk/errs-rust"
license = "MIT"
keywords = ["error", "error-handling", "reason", "notify", "notification"]
categories = ["rust-patterns"]

[dependencies]
trybuild = "1"
