[package]
name = "errs"
version = "0.2.0"
authors = ["Takayuki Sato <sttk.xslet@gmail.com>"]
edition = "2021"
rust-version = "1.80.1"
description = "A library for handling errors with reasons"
documentation = "https://docs.rs/errs"
readme = "README.md"
repository = "https://github.com/sttk/errs-rust"
license = "MIT"
keywords = ["error", "error-handling", "reason", "notify", "notification"]
categories = ["rust-patterns"]

[dependencies]
chrono = "0.4"
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[dev-dependencies]
trybuild = "1"

[features]
default = []

full = [
  "notify",
]

notify = []

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
