[package]
name = "errs"
version = "0.4.0"
authors = ["Takayuki Sato <sttk.xslet@gmail.com>"]
edition = "2021"
rust-version = "1.80.1"
description = "A library for handling errors with reasons"
documentation = "https://docs.rs/errs"
readme = "README.md"
repository = "https://github.com/sttk/errs-rust"
license = "MIT"
keywords = ["error", "error-handling", "reason", "notify", "notification"]
categories = ["rust-patterns"]

[dependencies]
chrono = { version = "0.4", optional = true }
tokio = { version = "1", optional = true }
setup_read_cleanup = { "version" = "0.5", optional = true }

[dev-dependencies]
trybuild = "1"

[features]
errs-notify = ["setup_read_cleanup/setup_read_cleanup-graceful", "dep:chrono"]
errs-notify-tokio = ["setup_read_cleanup/setup_read_cleanup-graceful", "setup_read_cleanup/setup_read_cleanup-on-tokio", "dep:chrono", "dep:tokio"]
default = []
full = ["errs-notify", "errs-notify-tokio"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
